repos_github/cloud-design/Manifests/networkpolicies/35-allow-metrics-from-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-from-monitoring
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: inventory-app
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
