repos_github/cloud-design/Manifests/networkpolicies/50-allow-rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-ingress
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
        - podSelector:
            matchLabels:
              app: billing-app
      ports:
        - protocol: TCP
          port: 5672
